fix：增加俩接口
