# routes/geekApi.go
@@ -1,7 +1,6 @@
 package routes
 
 import (
-
 	"geekdemo/service/geek"
 
 	"github.com/gin-gonic/gin"
@@ -11,4 +10,6 @@ func GeekApi(v1 *gin.RouterGroup) {
 	v1.POST("/geek/Alllist", geek.GeekList)
 
 	v1.GET("/geek/GetCourseType", Wrapper(geek.GetGeekCourseType))
+
+	v1.POST("/geek/GetGeekCourse", Wrapper(geek.GetGeekCourse))
 }
